--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,12 @@
             <version>2.8.6</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.github.cdimascio</groupId>
+            <artifactId>java-dotenv</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+
     </dependencies>
 
 
