--- a/pom.xml
+++ b/pom.xml
@@ -20,15 +20,6 @@
         </plugins>
     </build>
 
-    <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
-        <log4j2.version>2.14.1</log4j2.version>
-        <slf4j.version>1.7.32</slf4j.version>
-    </properties>
-
-
-
     <dependencies>
 
         <dependency>
@@ -53,13 +44,13 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>${slf4j.version}</version>
+            <version>1.7.32</version>
         </dependency>
 
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
-            <version>${slf4j.version}</version>
+            <version>1.7.32</version>
         </dependency>
 
         <dependency>
