--- a/pom.xml
+++ b/pom.xml
@@ -21,9 +21,10 @@
     </build>
 
     <properties>
-        <plugin/>
+        <plugin>
             <artifactId>maven-compiler-plugin</artifactId>
-            <version>3.6.2</version>
+            <version>3.6.3</version>
+        </plugin>
     </properties>
 
 
