--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <release>14</release>
+                    <source>15</source>
                 </configuration>
             </plugin>
         </plugins>
