--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
                 <version>3.8.1</version>
                 <configuration>
                     <source>15</source>
+                    <target>15</target>
                 </configuration>
             </plugin>
         </plugins>
