--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
                     <target>15</target>
                 </configuration>
             </plugin>
+        </plugins>
     </build>
 
     <properties>
